--- a/front_end/css/style.css
+++ b/front_end/css/style.css
@@ -10,7 +10,7 @@
 
 :root {
   --bs-primary: #164285 !important;
-  --bs-warning: #d5b018 !important;
+  --bs-warning: #ad901c !important;
   --bs-secondary: #b3b3b3 !important;
 }
 
