--- a/front_end/css/style.css
+++ b/front_end/css/style.css
@@ -30,7 +30,7 @@
 }
 .hado_border {
   border: 1px solid var(--bs-secondary);
-  border-radius: 7px;
+  border-radius: 8px;
 }
 
 .img-border {
@@ -481,7 +481,7 @@ footer section:nth-child(2) ul {
 
 
 /* contact page */
-.contact a {
+a {
   text-decoration: none;
 }
 
@@ -520,6 +520,16 @@ footer section:nth-child(2) ul {
   color:#969292;
   border: 1px transparent solid;
   border-radius: 10px;
+}
+/* 404 page */
+
+/* blogpage */
+.links img {
+  height: 60px;
+  width: 60px;
+}
+.blog-page section:nth-child(3) .card p ,span {
+  color:#969292;
 }
 
 
@@ -571,7 +581,12 @@ footer section:nth-child(2) ul {
   .content404 a {
     display: block;
   }
+  /* 404page */
 
+
+  .blog-page section:nth-child(3) .card img {
+    height: 180px;
+  }
 }
 
 /* Small devices (landscape phones, 576px and up) */
