change the color

--- a/front_end/css/style.css
+++ b/front_end/css/style.css
@@ -10,7 +10,7 @@
 
 :root {
   --bs-primary: #164285 !important;
-  --bs-warning: #aca51b !important;
+  --bs-warning: #bd8800 !important;
   --bs-secondary: #eceff0 !important;
 }
 
@@ -178,10 +178,12 @@ body {
   z-index: 5;
 }
 .ribbon .whatsapp {
-
   background-color: #54e516;
   border-radius: 50%;
   padding: 10px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
 }
 
 /* header */
@@ -621,9 +623,80 @@ a {
   right: 0;
   background-color:#070707;
 }
+.heartbeat {
+	-webkit-animation: heartbeat 3.5s ease-in-out infinite both;
+	        animation: heartbeat 3.5s ease-in-out infinite both;
+}
 
 
-
+ @-webkit-keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+            transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+            transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+            transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
+@keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+            transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+            transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+            transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+}
 
 
 /* Small devices (landscape phones, 576px and up) */
