--- a/front_end/css/style.css
+++ b/front_end/css/style.css
@@ -7,9 +7,9 @@
   margin: 0;
   padding: 0;
 }
-
+/* color 164285 */
 :root {
-  --bs-primary: #164285 !important;
+  --bs-primary: #001a33 !important;
   --bs-warning: #bd8800 !important;
   --bs-secondary: #eceff0 !important;
   --bs-gold-color:#efd097;
@@ -99,6 +99,7 @@ background: linear-gradient(90deg, rgba(189,136,0,1) 8%, rgba(135,101,49,1) 73%)
   border-color: var(--bs-primary) !important;
 }
 
+
 .btn-primary {
   color: #fff !important;
   background-color: var(--bs-primary) !important;
@@ -180,7 +181,7 @@ background: linear-gradient(90deg, rgba(189,136,0,1) 8%, rgba(135,101,49,1) 73%)
 
 body {
   background-color: #eee;
-  font-family: Poppins, sans-serif;
+  font-family: roboto;
 }
 
 a {
@@ -387,15 +388,14 @@ header {
 }
 
 .turk-props div a img {
-  border-radius: 8px;
+  
   z-index: 1;
 }
 
-.turk-props .overlay {
-  border-radius: 8px;
+
+.turk-props img {
+  height: 500px;
 }
-
-
 
 /* media query */
 
@@ -521,51 +521,57 @@ header {
   text-align: center;
   margin: 0 !important;
 }
-.call-center {
-  background-image: url('../images/call-center.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-  border-radius:8px;
+.call-center .image {
+  float: left;
+  width: 60%;
+}
+.call-center .form {
+  float: left;
+  width: 40%;
+}
+
+.call-center img {
+  height: 100vh;
+}
+
+.call-center input {
+  border-color: transparent ;
 }
 
 footer .row h4 {
   margin-bottom: 10px;
   color:#efd097;
-  padding: 10px;
+  
 }
 
-
+footer {
+  background-color: #001a33 !important;
+}
 
 footer  a {
   color: white;
-  line-height: 35px;
-  padding-left: 5px;
+  line-height: 30px;
+
 
 }
 footer  a:hover {
   color: var(--bs-gold-color);
 }
 .footer-media a {
-  margin: 15px;
-  padding: 9px;
+  margin: 5px;
+  padding: 7px;
   border: var(--bs-gold-color) 1px solid;
-  border-radius: 50%;
+
 
 }
 
 .footer-logo img {
-  height: 220px;
-  width: 180px;
+  height: 210px;
+  width: 160px;
 }
 
-footer{
-  background-image: url('../images/footer.jpg');
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  position: relative;
-}
-.footer-overlay{
+
+/* .footer-overlay{
   position: absolute;
   height: 100%;
   width: 100%;
@@ -573,7 +579,7 @@ footer{
   right: 0;
   background-color: rgb(22 66 133 / 75%);
   z-index: 0;
-}
+} */
 
 
 /* contact page */
@@ -708,6 +714,55 @@ input:focus {
 .ui-icon-triangle-1-e {
   background-position: 0;
 }
+
+
+
+/* landing page */
+.landing .services div {
+  width: calc(94% / 4);
+}
+.landing .carousel-inner img {
+  height: 350px;
+}
+.landing header {
+  color: white;
+  background-image: url("../images/basak\ sehir.jpg");
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
+/* .overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  background-color: rgba(182, 197, 211, 0.1);
+  z-index: 1;
+} */
+
+.landing input {
+  border: 2px var(--bs-secondary) solid;
+  border-radius: 3px;
+  width: 100%;
+  height: 45px;
+  padding: 15px;
+  margin-bottom: 10px;
+  display: block;
+  background-color: var(--bs-secondary);
+}
+
+.landing header li {
+  display: inline;
+}
+.main p {
+  color: var(--bs-warning);
+  width: 33%;
+  text-align: center;
+  font-weight: bold;
+
+}
+
 
 /* apartment */
 .apartment .box {
@@ -861,6 +916,13 @@ input:focus {
     width: 100%;
     height: 180px;
   }
+  .call-center .form input {
+    padding: 10px !important;
+  }
+  .call-center .form {
+    margin-top: 0 !important;
+    width: 100%;
+  }
   /* contact */
   .Offices .row div {
     width: 100%;
@@ -908,10 +970,28 @@ input:focus {
     height: 220px;
   } 
 }
+
 @media (max-width: 767px){
+  header .toper .mobile-side div:nth-child(2) {
+    background-color: rgb(243, 240, 240);
+    border-radius: 50%;
+  }
+
+
+
   .apartment .box {
     display: inline-block;
     width: calc(98% /2);
+  }
+  .call-center .image  {
+    width: 100%;
+  }
+  .call-center img {
+    height: 400px;
+  }
+  .call-center .form  {
+    width: 100%;
+
   }
 }
 @media (max-width: 991px){
@@ -924,7 +1004,7 @@ input:focus {
     display: none;
   }
 
-  .turk-props .props {
+  /* .turk-props .props {
     width: 50%;
   }
   .turk-props .props img {
@@ -934,6 +1014,9 @@ input:focus {
   .turk-props .larg img {
     height: 200px;
     width: 100%;
+  } */
+  .turk-props img {
+    height: 400px;
   }
   .services {
     display: none;
